@@ -1263,9 +1263,6 @@ do_curl_setopt(CurlObject *self, PyObject *args)
 #if LIBCURL_VERSION_NUM >= 0x071500 /* check for 7.21.0 or greater */
     case CURLOPT_WILDCARDMATCH:
 #endif
-#if LIBCURL_VERSION_NUM >= 0x072800 /* check for 7.40.0 or greater */
-    case CURLOPT_UNIX_SOCKET_PATH:
-#endif
 /* FIXME: check if more of these options allow binary data */
             str = PyText_AsString_NoNUL(obj, &encoded_obj);
             if (str == NULL)
